# bilal-accounting

./: README.md  bilal_data.json  build_apk.sh  main.py  pyproject.toml
.github/workflows/: build.yml
